--- a/hw1/report/hw1_math573.tex
+++ b/hw1/report/hw1_math573.tex
@@ -90,6 +90,10 @@
 \providecommand{\F}{\mathbb{F}}%
 \providecommand{\quat}{\mathbb{H}}%
 
+% haha, i originally forked this template from one provided by my abstract
+% algebra TA (back in 2012 or something). probably don't need most of these,
+% huh. 
+
 % New Commands: Operators
 \providecommand{\Gal}{\operatorname{Gal}}%
 \providecommand{\GL}{\operatorname{GL}}%
@@ -144,8 +148,8 @@
 \maketitle \thispagestyle{empty} % remove the page number from the first page
 
 %
-%\begin{small}
-%\end{small}
+\begin{small} \textit{Note: for information on the python scripts used in this
+report, refer to the included} \texttt{README.txt}.\end{small}
 %\bigskip
 
 \begin{prob}
@@ -225,18 +229,48 @@ orthogonal each $k$, to obtain
 %%% PROBLEM 2
 
 \begin{prob}
-    Refer to \texttt{luke\_Wukmer\_HW1\_Prob2.py} and \texttt{p2b.py}. The graphs
+    Refer to \texttt{luke\_Wukmer\_HW1\_Prob2.py} and \texttt{p2b.py}.
+    Gradient descent is used to obtain a minimum for the surface
+    $f(x,y)$ depicted in Figure 1.
     \begin{figure}[h]
         \centering
         \includegraphics[width=\textwidth]{fig1}
-        \caption{A recreation of Fig 2.1(a) from the text. A plot of the surface
+        \caption{A plot of the surface
             $f = \rfrac{3}{2}x_1^2 + 2x_1 x_2 + 3x_2^2 - 2x_1 + 8x_2$,
-            showing a contour plot in the xy-plane}
+          showing a contour plot in the xy-plane.
+          A recreation of Fig 2.1(a) from the text.} 
     \end{figure}
 
-    And then I say some more and then...
+    The script \texttt{p2b.py} contains the actual algorithm used to find the
+    solution (whereas \texttt{luke\_Wukmer\_HW1\_Prob2.py} is restricted in
+    scope to generating the necessary figures). The brunt of the algorithm is
+    essentially a faithful porting of the algorithm described in pp.42-3 of the
+    text. When run by itself, it provides about gradient descent convergence
+    (run in this particular case will tolerance \texttt{10e-6}):
     
-    \begin{figure}[h]
+    \begin{small}
+    \begin{verbatim}
+    wukm@zoo ~/573/hw1 % p2b.py
+    converged in 9 iterations.
+    step 0: f(1	,-0.2)	= -2.38
+    step 1: f(0.9041163435498009	,-1.6062936279362545)	= -8.596457152247144
+    step 2: f(1.8158080581710858	,-1.6684544745739032)	= -9.741478714823582
+    step 3: f(1.798147051701616	,-1.927482457095344)	= -9.95238245848541
+    step 4: f(1.9660733282096614	,-1.9389319809148695)	= -9.991229231827678
+    step 5: f(1.9628203117633845	,-1.9866428520181425)	= -9.998384495162707
+    step 6: f(1.9937509872961738	,-1.9887517633391165)	= -9.999702437023984
+    step 7: f(1.9931518048176313	,-1.9975397215892408)	= -9.999945191358062
+    step 8: f(1.9988489831096707	,-1.9979281675378637)	= -9.99998990469924
+    step 9: f(1.9987386189780325	,-1.9995468337889295)	= -9.99999814052855
+    \end{verbatim} 
+    \end{small}
+    
+    A visualization of this convergence to the solution is shown in Fig 2
+    (below).  Note that by the nature of the gradient descent algorithm, each
+    segment is exactly perpindicular to the level curve passing through each
+    $f(x_i)$.
+
+    \begin{figure}[t]
         \centering
         \includegraphics[width=\textwidth]{fig2}
         \caption{A visualization of gradient descent performed on the surface
@@ -248,6 +282,7 @@ orthogonal each $k$, to obtain
 \end{prob}
 
 \hrulefill
+\clearpage
 %%% PROBLEM 3
 \begin{prob}
 
@@ -286,8 +321,12 @@ finished in 162 iterations
 || b - Ax || =  6.94833183485e-10
 \end{verbatim}
 
-Of course, theoretically this should have converged within 100 iterations, but we can attribute this discrepancy to machine error introduced.
-The method used for generating random SPD matrices involves creating a symmetric matrix from a uniformly random initial matrix and assuring that it is diagonally dominant.
+Of course, theoretically this should have converged within 100 iterations, but
+we can attribute this discrepancy to unnecessarily high tolerance used.
+
+Refer to \texttt{util.py} for the method of generating random SPD matrices,
+which involves creating a symmetric matrix from a uniformly random initial
+matrix and assuring that it is diagonally dominant.
 
 \subsection*{(b)}
 
@@ -301,7 +340,7 @@ The conjugate gradient method detailed above is now tested on a particular syste
 
 A sample running with parameters \texttt{N=15, $\epsilon$=10e-12} finds the
 solution as expected, and within the theoretical limit of iterations. Since we
-know the true solution $x^{bigstar}$ we can calculate the error in the found solution
+know the true solution $x^{\bigstar}$ we can calculate the error in the found solution
 directly:
 
 \begin{verbatim}
@@ -333,4 +372,11 @@ to the problem-at-hand.
 \end{prob}
 \hrulefill
 
+\subsection*{\textsc{TODO}}
+  \begin{itemize}
+    \item Investigate behavior of \texttt{util.random\_spd()} function
+    \item Investigate use of more appropriate tolerances $(\epsilon)$ so as to
+          not introduce unnecessary error
+    \item Clean up \texttt{luke\_Wukmer\_HW1\_Prob2.py} (see docstring)
+  \end{itemize}
 \end{document}
