--- a/hw3/report/hw3.tex
+++ b/hw3/report/hw3.tex
@@ -176,9 +176,63 @@
             \downarrow & \downarrow & \downarrow &  & \downarrow 
             \end{bmatrix}
 \]
-
+In particular, we consider the following data ($m=4$):
+    \begin{center}
+        \begin{tabular}{c c c c c}
+        \hline
+        $x_i$ & 1.0 & 1.1 & 1.3 & 1.5 \\
+        $y_i$ & 1.84 & 1.96 & 2.21 & 2.45\\
+        \hline
+        \end{tabular}
+    \end{center}
 \begin{enumerate}[\bfseries(a)]
-\item $n=2$: Write stuff here about the things 
+\item $n=2$: We find a 
+    \[
+            \mathbb{X} = \begin{pmatrix}
+                1 & 1.0 & (1.0)^2 \\
+                1 & (1.1) & (1.1)^2 \\
+                1 & (1.3) & (1.3)^2 \\
+                1 & (1.5) & (1.5)^2 \\
+            \end{pmatrix}
+            \quad \Longrightarrow \quad
+            \mathbb{X}^T\mathbb{X} = 
+            \begin{pmatrix} 
+            4.    &   4.9   &   6.15  \\
+            4.9   &   6.15  &   7.903 \\
+            6.15  &   7.903 &  10.3827\\
+        \end{pmatrix}
+            \]
+    \[
+        \mathbb{X}^T \bm{y} = \mathbb{X}^T \begin{bmatrix} 1.84 \\ 1.96 \\ 2.21 \\ 2.45 \end{bmatrix}
+        = \begin{pmatrix}8.46 \\  10.544 \\  13.459 \end{pmatrix}
+        \]
+    Thus we have the system
+    \[
+            \left(\mathbb{X}^T\mathbb{X}\right)\bm{a} = 
+            \begin{pmatrix} 
+            4.    &   4.9   &   6.15  \\
+            4.9   &   6.15  &   7.903 \\
+            6.15  &   7.903 &  10.3827\\
+            \end{pmatrix} \begin{bmatrix} a_0 \\ a_1 \\ a_2 \end{bmatrix}
+        = \begin{pmatrix}8.46 \\  10.544 \\  13.459 \end{pmatrix}
+        = \mathbb{X}^T \bm{y}
+    \]
+
+    whose solution (Gaussian elimination or whatever) is
+    $\bm{a} = \begin{bmatrix} 0.55253769  & 1.32751256 & -0.04145729\end{bmatrix}^T$
+    corresponding to the polynomial
+    \[
+            y = p_2(x) := 0.55253769 + 1.32751256 \,x - 0.04145729\, x^2
+        \]
+        with least squares error
+        $E_2(\bm{a}) = \sum_{i=1}^m \left[\, p_2(x_i) - y_i\, \right]^2 = 1.23115577889\mathsf{e}-5$.
+            
+        \begin{figure}[p]
+        \begin{center}
+        \includegraphics[width=0.8\textwidth]{p1_2}
+        \caption{Least squares polynomial degree (2)}
+        \end{center}
+    \end{figure}
 \item $n=3$:
     Setting $\frac{\partial E_2(a_0, \ldots , a_3)}{\partial a_i} = 0$ for each $i$
     results in the system
@@ -211,12 +265,28 @@ the least-squares polynomial of degree 3 is
         y = p_3(x) = 1.6575  - 1.38416667 x + 2.15 x^2  - 0.58333333 x^3
 \]
 
-\item   $y= bx^a$ \textit{form}:
+\begin{figure}[p]
+        \begin{center}
+        \includegraphics[width=0.8\textwidth]{p1_3}
+        \caption{Least squares polynomial degree (3)}
+        \end{center}
+    \end{figure}
+\item   $y= bx^a$ form:
     Solving the equations $\frac{\partial E_2}{\partial a} , \frac{\partial E_2}{\partial b}$
     results in a nasty system of nonlinear equations, so we search for the
-    linearized form of our target equation.
+    linearized form of our target equation. Continue the mild derivation.
+
+    The solution of the system is $p(x) = (1.8362676528) x^{0.708717475596}$
+    \begin{figure}[p]
+        \begin{center}
+            \includegraphics[width=0.8\textwidth]{p1_exp}
+        \caption{Least squares polynomial degree (3)}
+        \end{center}
+    \end{figure}
 \end{enumerate}
+
 \end{prob}
+
 %%% PROBLEM 2
 \begin{prob}
     A cardinal spline is a sequence of individual curves joined to form a
@@ -337,29 +407,22 @@ We plot these blending functions for several values of $c$ below.
     Least squares line
     Least squares line
     Least squares line
-    Least squares line
-    Least squares line
-    Least squares line
-    Least squares line
-    Least squares line
-    Least squares line
-    Least squares line
-    Least squares line
-    \begin{wrapfigure}{r}{0.5\textwidth}
+    \begin{figure}[p]
         \begin{center}
-        \includegraphics[width=0.48\textwidth]{p3}
+        \includegraphics[width=0.6\textwidth]{p3}
+    \caption{Problem 3: i graphed the stuff}
     \end{center}
-        \caption{HW Scores \& stuff bleh title}
-    \end{wrapfigure}
+    \end{figure}
 \end{prob}
 %%% PROBLEM 4
 \begin{prob}
     B-splines.
-    \begin{wrapfigure}{r}{0.5\textwidth}
-        \centering
-        \includegraphics[width=0.48\textwidth]{doggy_splines}
+    \begin{figure}[p]
+        \begin{center}
+        \includegraphics[width=0.8\textwidth]{doggy_splines}
         \caption{B-spline fitting of the doggy-data in Table 3}
-    \end{wrapfigure}
+    \end{center}
+    \end{figure}
 \end{prob}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
